src/test/wacc/invalid/semanticErr/array/badIndex.wacc
# Too much indexing!
# Thanks to David Pan

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1];
  println a[1][2]
end
